feat: add basic structurre in html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="input-container">
+        <div class="input-group">
+            <label for="travel-km">Inserisci qui i km da percorrere</label>
+            <input type="number" name="" id="travel-km">
+        </div>
+        <div class="input-group"></div>
+            <label for="user-age">Inserisci qui la tua età</label>
+            <input type="number" name="" id="user-age">
+        </div>
+        <button type="button">Genera il biglietto</button>
+    </div>
     <!--js-->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
