style: change "riepilogo" disposition

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <div id="ticket">
                     <h4>Riepilogo viaggio:</h4>
                     <div>
-                        <h5>Nome</h5>
+                        <h5>Nome:</h5>
                         <div id="buyer-name">---</div>
                     </div>
                     <div>
-                        <h5>Offerta</h5>
+                        <h5>Offerta:</h5>
                         <div id="buyer-offer">---</div>
                     </div>
                     <div>
